Sources/sra-asm/Resources/Grammar_asm.txt
<asm> -> ?<sections>? .eof

<sections> -> <section> ?\n <sections>?

<section> -> <exec>
<section> -> <data>

<exec> -> exec { ?<functions>? }

<functions> -> <function> ?\n <functions>?

<function> -> main { ?<instructions>? }
<function> -> .identifier ?(link : <location>)? ?(<func-args>)? ?(ret : <location>)? { ?<instructions>? }

<func-args> -> <func-arg> ?,<func-args>?

<func-arg> -> .identifier : <location>

<location> -> .identifier ?. <location>?

<instructions> -> <instruction> ?<break> <instructions>?

<break> -> \n
<break> -> ;

<instruction> -> ?<label>? .instruction ?<args>?

<label> -> .identifier : ?\n?

<args> -> <arg> ?, <args>?

<arg> -> <location>
<arg> -> <immediate>

<immediate> -> # .numericLiteral ?[ .numericLiteral ]?

<data> -> data { ?<data-blocks>? }

<data-blocks> -> <data-block> ?\n <data-blocks>?

<data-block> -> <variables>
<data-block> -> .identifier { <variables> }

<variables> -> <variable> ?\n <variables>?

<variable> -> .identifier ?= .numericLiteral?
<variable> -> .identifier ?= .charLiteral?
